// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapFlow renders 0 1`] = `
Array [
  .c0 {
  wrap-flow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: 0;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders function 1`] = `
Array [
  .c0 {
  wrap-flow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: has;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders invalid theme path 1`] = `
Array [
  .c0 {
  wrap-flow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders negative number 1`] = `
Array [
  .c0 {
  wrap-flow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  wrap-flow: July;
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-flow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: July;
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-flow: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-flow: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-flow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    wrap-flow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-flow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    wrap-flow: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-flow: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-flow: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    wrap-flow: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    wrap-flow: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  wrap-flow: July;
}

@media May {
  .c0 {
    wrap-flow: August;
  }
}

@media April {
  .c0 {
    wrap-flow: September;
  }
}

@media January {
  .c0 {
    wrap-flow: November;
  }
}

@media April {
  .c0 {
    wrap-flow: August;
  }
}

@media June {
  .c0 {
    wrap-flow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: July;
}

@media May {
  .c0 {
    wrap-flow: August;
  }
}

@media April {
  .c0 {
    wrap-flow: September;
  }
}

@media January {
  .c0 {
    wrap-flow: November;
  }
}

@media April {
  .c0 {
    wrap-flow: August;
  }
}

@media June {
  .c0 {
    wrap-flow: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-flow: November;
  }
}

@media April {
  .c0 {
    wrap-flow: January;
  }
}

@media January {
  .c0 {
    wrap-flow: December;
  }
}

@media April {
  .c0 {
    wrap-flow: April;
  }
}

@media June {
  .c0 {
    wrap-flow: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-flow: November;
  }
}

@media April {
  .c0 {
    wrap-flow: January;
  }
}

@media January {
  .c0 {
    wrap-flow: December;
  }
}

@media April {
  .c0 {
    wrap-flow: April;
  }
}

@media June {
  .c0 {
    wrap-flow: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    wrap-flow: July;
  }
}

@media April {
  .c0 {
    wrap-flow: August;
  }
}

@media January {
  .c0 {
    wrap-flow: September;
  }
}

@media April {
  .c0 {
    wrap-flow: November;
  }
}

@media June {
  .c0 {
    wrap-flow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    wrap-flow: July;
  }
}

@media April {
  .c0 {
    wrap-flow: August;
  }
}

@media January {
  .c0 {
    wrap-flow: September;
  }
}

@media April {
  .c0 {
    wrap-flow: November;
  }
}

@media June {
  .c0 {
    wrap-flow: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-flow: January;
  }
}

@media April {
  .c0 {
    wrap-flow: December;
  }
}

@media January {
  .c0 {
    wrap-flow: April;
  }
}

@media April {
  .c0 {
    wrap-flow: May;
  }
}

@media June {
  .c0 {
    wrap-flow: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    wrap-flow: January;
  }
}

@media April {
  .c0 {
    wrap-flow: December;
  }
}

@media January {
  .c0 {
    wrap-flow: April;
  }
}

@media April {
  .c0 {
    wrap-flow: May;
  }
}

@media June {
  .c0 {
    wrap-flow: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders postitive number 1`] = `
Array [
  .c0 {
  wrap-flow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders string 1`] = `
Array [
  .c0 {
  wrap-flow: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: July;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: June;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wrapFlow renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`wrapFlow renders valid theme path 1`] = `
Array [
  .c0 {
  wrap-flow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  wrap-flow: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
